--- a/BooksBud-Project/package.json
+++ b/BooksBud-Project/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^5.3.2",
     "react-scripts": "^4.0.3",
+    "react-simple-typewriter": "^3.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
